Fix overflow, pt 1

--- a/app/assets/stylesheets/components/_incoming_deposits_modal.scss
+++ b/app/assets/stylesheets/components/_incoming_deposits_modal.scss
@@ -30,7 +30,7 @@
 	display: grid;
 	grid-gap: 1rem;
 	max-height: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
 	padding: 1rem;
 	margin: -0.5rem -1rem 0;
